--- a/src/table/stv-table.html
+++ b/src/table/stv-table.html
@@ -1,6 +1,4 @@
-<script src="../../bower_components/file-saver.js/FileSaver.js"></script>
-
-
+<script src="../../../file-saver.js/FileSaver.js"></script>
 
 <dom-module id="stv-table">
     <style>
